--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <link rel="icon" type="image/svg+xml" href="/images/tk.png">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="portfolio, Portfolio, tirth, tkpatel, tk, tirthkapadi, Tirth Kapadi, T K Patel">
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/images/tk.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="keywords"
+            content="portfolio, Portfolio, tirth, tkpatel, tk, tirthkapadi, Tirth Kapadi, T K Patel"
+        />
         <title>Tirth Kapadi | Portfolio</title>
     </head>
     <body>
